# Codegenerator-Cplusplus

./: .gitignore  Codegenerator.EAP  Codegenerator.ldb  README.md  Rules.docx  gitrepository.txt  ~$Rules.docx
Codegenerator/: Codegenerator.pro  main.cpp  mainwindow.cpp
Codegenerator12/: Codegenerator.pro
Design1/: Codegenerator.EAP
Excel/: TestMap.xlsx
Exceptionhandling/: Baseexception.h  Baseexecption.cpp
Keywords/: Keywords.txt  KeywordsCPlusPlus.java  myFirstKeywords.txt
Rules/: Function.txt  RulesC++.txt  class_First.r.txt
Scripts/: Script.txt  firstScript.txt  myFirstScript.txt
Sources/: BaseEvaluator.h  BaseGenerator.h  BaseParserImplementation.h  Codegenerator.pro  Codegenerator.pro.user.3.2-pre1  Codegenerator.pro.user.5379a44  Codegenerator.pro.user.UH9948  Codegenerator.pro.user.c8f10e1  Codegenerator.pro.user.w10564  Codegeneratorfassade.cpp  Codegeneratorfassade.h  Generator.cpp.autosave  GeneratorCPlusPlus.h  GeneratorCPusPlus.cpp  Keywords.h  KeywordsCPlusPlus.cpp  Keywordscplusplus.h  Makefile  Makefile.Debug  Makefile.Release  Parser..cpp  Parser..h  Parser.cpp  Parser.h  ParserFassade.cpp  ParserFassade.h  Parserimplementation.h  ParsingVectordata.h  RulesC++.cpp  Rulescplusplus.cpp  Rulescplusplus.h  Script.cpp  Script.h  Utilities.h  baseKeywordChecker.h  codegeneratorconstants.h  datas.h  evaluator.cpp  evaluator.h  excetionhandling.cpp  (+19 more)
Sources/Base/: BaseEvaluator.h  BaseGenerator.h  BaseParserImplementation.h  baseKeywordChecker.h
Sources/Codegen/: Attribute.cpp  Attribute.h  Attributeelements.cpp  Attributeelements.h  Attributegenerator.cpp  Attributegenerator.cpp.autosave  Attributegenerator.h  Attributegenerator.h.autosave  Basecodegenerator.h  Basecodegenerator.h.autosave  CPluspluscodegenerator.cpp  CPluspluscodegenerator.h  Codegeneratorimpl.cpp  Codegeneratorimpl.cpp.autosave  Codegeneratorimpl.h  Fuctioncodegenerator.cpp  Fuctioncodegenerator.cpp.autosave  Fuctioncodegenerator.h  Functionelements.cpp  Functionelements.cpp.autosave  Functionelements.h  basecodegenerator.cpp  baseelements.h  classelements.cpp  classelements.h  classgenerator.cpp  classgenerator.h  codegeneratorconstants.cpp  codegeneratorconstants.h
Sources/Errorhandling/: Attributescriptexception.cpp  Attributescriptexception.h  Exceptionhandling.h  FileNotvalidexception.cpp  FileNotvalidexception.h  Functionscriptexception.cpp  Functionscriptexception.h  OpenfileException.h  Xmlfileexception.cpp  Xmlfileexception.h  openfileexception.cpp  scriptexception.cpp  scriptexception.h
Sources/Gui/: BaseLoadAndFormate.h  attributeload.cpp  attributeload.h  attributewidget.cpp  (+17 more)
Sources1/: Keywords.cpp  Parser.cpp  ParserFassade.h  Script.cpp  Script.h  Utilities.h  mainwindow.cpp
UnitTest/Testqt519/Codegenerator/: CMakeLists.txt
UnitTest/Testqt519/Codegenerator/Source/: ReceiveDataTest.cpp  baseevaluator.h  classtest.cpp  evaluatetest.cpp  evaluatetest.h  extractstringstest.cpp  functiontest.cpp  generatortest.cpp  guiattribute.cpp  guidatamanagertest.cpp  mockcpluspluscodegenerator.cpp  mockcpluspluscodegenerator.h  parsertest.cpp  testdatagenerator.h  testutilities.cpp
build-Codegenerator-Desktop_Qt_5_3_MSVC2013_64bit-Debug/: Makefile  Makefile (2).Debug  Makefile.Debug  Makefile.Release
build-Codegenerator-Desktop_Qt_5_3_MSVC2013_64bit-Debug1/: Makefile.Release
build-Codegenerator-Desktop_Qt_5_4_2_MinGW_32bit2-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Codegenerator.Debug  object_script.Codegenerator.Release
build-Codegenerator-Desktop_Qt_5_4_2_MinGW_32bit2-Debug12345/: Makefile.Debug  Makefile.Release
build-Codegenerator-Desktop_Qt_5_6_0_MinGW_32bit2-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Codegenerator.Debug  object_script.Codegenerator.Release
build-Codegenerator-Desktop_Qt_5_7_0_MinGW_32bit-Test/: Makefile  ui_attributewidget.h  ui_functionwidged.h  ui_mainwindow.h
build-Codegenerator-Qt_5_7_0_mingw53_32-Debug/: Makefile  ui_attributewidget.h  ui_functionwidged.h  ui_mainwindow.h
googlemock/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1
(+184 files in other folders)
